--- a/CalculoHomologiaCompleja.ipynb
+++ b/CalculoHomologiaCompleja.ipynb
@@ -13,7 +13,7 @@
     "$$\n",
     "# Complex Homology Calculation\n",
     "\n",
-    "The ring `AN` is the base ring over which we are going to work.\n",
+    "This program follows the procedure of the proof of Lemma 8.2. The ring `AN` is the base ring over which we are going to work.\n",
     "In fact, the ring that interest us is the ring\n",
     "$$R_{a,b,m}=\\mathbb{C}[t,s,u]/(t^a-1,s^b-1,u^m-1),$$ \n",
     "but we work with\n",
@@ -1332,7 +1332,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "SageMath 9.2.beta5",
+   "display_name": "SageMath 9.1",
    "language": "sage",
    "name": "sagemath"
   },
