--- a/CalculoHomologiaCompleja.ipynb
+++ b/CalculoHomologiaCompleja.ipynb
@@ -17,7 +17,7 @@
     "In fact, the ring that interests us is the ring\n",
     "$$R_{a,b,m}=\\mathbb{C}[t,s,u]/(t^a-1,s^b-1,u^m-1),$$ \n",
     "but we work with\n",
-    "`AN` for practical reasons. We define another rings that we will use\n",
+    "`AN` for practical reasons. We define other rings that we will use\n",
     "too, and lists of keys that will be used to store the data orderly."
    ]
   },
@@ -817,7 +817,7 @@
     "The following cell examines the case $(\\zeta_i,\\xi_j,\\mu_k)=(1,1,\\mu_k)$, with\n",
     "$\\mu_k\\neq 1$.\n",
     "\n",
-    "In this case $\\dim M_{0,0,k}^{(r)}=5,18,23,12,3$ for $r=0,\\dots,4$.\n",
+    "In this case $\\dim (M_{0,0,k}^{(r)})=5,18,23,12,3$ for $r=0,\\dots,4$.\n",
     "\n",
     "Here we interpret the matrices $\\partial^{(r)}$ as having values in\n",
     "$\\mathbb{C}[u]$.\n",
@@ -924,7 +924,7 @@
     "The following cell examines the case $(\\zeta_i,\\xi_j,\\mu_k)=(\\zeta_i,\\xi_j,1)$, with\n",
     "$\\zeta_i,\\xi_j\\neq 1$.\n",
     "\n",
-    "In this case $\\dim M_{i,j,0}^{(r)}=4,17,23,12,2$ for $r=0,\\dots,4$.\n",
+    "In this case $\\dim (M_{i,j,0}^{(r)})=4,17,23,12,2$ for $r=0,\\dots,4$.\n",
     "\n",
     "Here we interpret the matrices $\\partial^{(r)}$ as having values in\n",
     "$\\mathbb{C}[t,s]$ for which the Smith form does not necessarily exists,\n",
@@ -933,8 +933,8 @@
     "The results below state that the ranks of these matrices are:\n",
     "$4,13,10,2$, independently of the value of $t,s\\neq 1$.\n",
     "\n",
-    "Something similar happens for the cases $(\\zeta_i,\\xi_j,\\mu_k)=(\\zeta_i,1,\\mu_k)$, with\n",
-    "$\\zeta_i,\\mu_k\\neq 1$ and $(\\zeta_i,\\xi_j,\\mu_k)=(1,\\xi_j,\\mu_k)$, with $\\xi_j,\\mu_k\\neq 1$."
+    "We proceed in a similar way for the cases $(\\zeta_i,\\xi_j,\\mu_k)=(\\zeta_i,1,\\mu_k)$, with\n",
+    "$\\zeta_i,\\mu_k\\neq 1$, and $(\\zeta_i,\\xi_j,\\mu_k)=(1,\\xi_j,\\mu_k)$, with $\\xi_j,\\mu_k\\neq 1$."
    ]
   },
   {
@@ -1115,7 +1115,7 @@
     "The following cell examines the case $(\\zeta_i,\\xi_j,\\mu_k)=(\\zeta_i,\\xi_j,\\mu_k)$, with\n",
     "$\\zeta_i,\\xi_j,\\mu_k\\neq 1$.\n",
     "\n",
-    "In this case $\\dim M_{i,j,k}^{(r)}=1,12,21,12,2$ for $r=0,\\dots,4$.\n",
+    "In this case $\\dim (M_{i,j,k}^{(r)})=1,12,21,12,2$ for $r=0,\\dots,4$.\n",
     "\n",
     "Here we interpret the matrices $\\partial^{(r)}$ as having values in\n",
     "$\\mathbb{C}[t,s,u]$ for which the Smith form does not necessarily exists,\n",
@@ -1123,7 +1123,7 @@
     "\n",
     "The results below state that the ranks of these matrices are:\n",
     "$\\partial_{i,j,k}^{(1)}:1$, $\\partial_{i,j,k}^{(3)}:10$, $\\partial_{i,j,k}^{(4)}:2$, independently of\n",
-    "the value of $s,t,u\\neq 1$. But $\\partial_{i,j,k}^{(2)}$ has rank $10$ if $t=s$ and rank\n",
+    "the value of $t,s,u\\neq 1$. But $\\partial_{i,j,k}^{(2)}$ has rank $10$ if $t=s$ and rank\n",
     "$11$ if $t\\neq s$. This happens in $(d-1)(m-1)$ cases, $d=\\gcd(a,b)$.\n",
     "\n",
     "It can be calculated that $H_2,H_1$ has rank $1$ if $s=t$; and zero\n",
